縦にスクロールバーを設置

--- a/MiniRisViewer/Views/MainWindow.xaml
+++ b/MiniRisViewer/Views/MainWindow.xaml
@@ -6,8 +6,8 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:prism="http://prismlibrary.com/"
     Title="{Binding Title}"
-    Width="1024"
-    Height="460"
+    Width="auto"
+    Height="auto"
     prism:ViewModelLocator.AutoWireViewModel="True"
     Background="{DynamicResource MaterialDesignPaper}"
     FontFamily="{DynamicResource MaterialDesignFont}"
