ボタンの動作不具合を修正（動くがサービス数は可変には未対応）

--- a/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
+++ b/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
@@ -67,7 +67,7 @@
                                                         Text="{Binding Status.Value, Converter={StaticResource StatusConverter}}" />
                                                     <ToggleButton
                                                         Margin="16,0,16,8"
-                                                        Command="{Binding ImporterCommand}"
+                                                        Command="{Binding StartStopCommand}"
                                                         IsChecked="{Binding Status.Value, Converter={StaticResource SimpleStatus}}"
                                                         Style="{StaticResource MaterialDesignSwitchToggleButton}"
                                                         ToolTip="Default ToggleButton Style" />
