コメントアウトしているソースを削除、変数名の変更等、ソースの整形

--- a/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
+++ b/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
@@ -34,7 +34,7 @@
 
                     <WrapPanel Orientation="Horizontal">
 
-                        <ItemsControl ItemsSource="{Binding ServiceCards}">
+                        <ItemsControl ItemsSource="{Binding Services}">
                             <!--<ItemsControl ItemsSource="{Binding ServiceCards}">-->
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
